fix(monitoraggio-caricamenti) border chip visibile 20241009

--- a/fe-piattaforma/src/pages/administrator/MonitoraggioCaricamenti/monitoring.scss
+++ b/fe-piattaforma/src/pages/administrator/MonitoraggioCaricamenti/monitoring.scss
@@ -62,3 +62,8 @@
     margin-top: 20px;
 }
 
+.chipsRow{
+    .chip{
+        border: 1px solid #dfe4f2 !important;
+    }
+}
